--- a/views/base/head.pug
+++ b/views/base/head.pug
@@ -1,7 +1,8 @@
 head
   title= `${title} | ${h.siteName}`
   link(rel='stylesheet', href='https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css', integrity='sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T', crossorigin='anonymous')
+  link(rel='stylesheet', href='https://maxcdn.icons8.com/fonts/line-awesome/1.1/css/line-awesome-font-awesome.min.css')
   link(rel='stylesheet', href='/dist/style.css')
   link(rel='shortcut icon' type='image/png' href='/images/icons/note.png')
-  script(src='https://kit.fontawesome.com/6e28f431f6.js')
-  meta(name="viewport" content="width=device-width, initial-scale=1")
+  //script(src='https://kit.fontawesome.com/6e28f431f6.js')
+  meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
