Passport setup with Session support Notes page is actively retrieving data from DB Ability to add notes through postman Styling changes

--- a/views/about.pug
+++ b/views/about.pug
@@ -3,7 +3,7 @@ extends base/layout
 block content
   div.row
     div.col-12
-      div.jumbotron.py-3.my-5
+      div.jumbotron.py-3.my-3.shadow.rounded
         h3 What is this?
         p.lead A simple note taking app built from the ground up.
         hr.mx-auto
@@ -26,7 +26,7 @@ block content
         div.row.py-0
           div.col-xs-12.col-s-12.col-md-4.col-lg-4
             div.text-center
-              button.btn.btn-primary(
+              button.btn.btn-primary.shadow(
                 class='mx-4 my-4',
                 type='button',
                 data-toggle='collapse',
@@ -42,7 +42,7 @@ block content
 
           div.col-xs-12.col-s-12.col-md-4.col-lg-4
             div.text-center
-              button.btn.btn-primary.text-center(
+              button.btn.btn-primary.text-center.shadow(
                 class='mx-4 my-4',
                 type='button',
                 data-toggle='collapse',
@@ -58,7 +58,7 @@ block content
 
           div.col-xs-12.col-s-12.col-md-4.col-lg-4
             div.text-center
-              button.btn.btn-primary(
+              button.btn.btn-primary.shadow(
                 class='mx-4 my-4',
                 type='button',
                 data-toggle='collapse',
