--- a/views/base/layout.pug
+++ b/views/base/layout.pug
@@ -5,7 +5,7 @@ html
     block header
       include nav
     block messages
-    div.container.h-100
+    div.container.h-100.border
       block content
     block scripts
       script(src="https://code.jquery.com/jquery-3.3.1.slim.min.js", integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo", crossorigin="anonymous")
