--- a/views/notes.pug
+++ b/views/notes.pug
@@ -1,3 +1,8 @@
 extends base/layout
-
+include mixins/note
 block content
+  div.row.border
+    each note in notes
+      div.col-xs-12.col-sm-12.col-md-6.col-lg-4.col-xl-3.border
+        +note(note)
+
