--- a/views/register.pug
+++ b/views/register.pug
@@ -5,18 +5,18 @@ block content
     div.col-xs-12.col-sm-10.col-md-8.col-lg-6.mx-auto.align-self-center
       form(action="/register" method="POST")
         div.form-group
-          input.form-control(id='registerEmail', name='email', type='email', placeholder='Email', tabindex='5', autofocus, required)
+          input#registerEmail.form-control(name='email', type='email', placeholder='Email', tabindex='5', autofocus, required)
         div.form-group
           div.input-group
             span.input-group-btn
-              button.btn.btn-secondary(id='viewPassword1Button', type="button", tabindex='6')
-                i.fa.fa-eye-slash(id='password1Icon')
-            input.form-control(name='password', id='password1' type="password", placeholder="Password", aria-label="Enter Password", tabindex='7', required)
+              button#viewPassword1Button.btn.btn-secondary(type="button", tabindex='6')
+                i#password1Icon.fa.fa-eye-slash
+            input#password.form-control(name='password', type="password", placeholder="Password", aria-label="Enter Password", tabindex='7', required)
         div.form-group
           div.input-group
             span.input-group-btn
-              button.btn.btn-secondary(id='viewPassword2Button', type="button", tabindex='8')
-                i.fa.fa-eye-slash(id='password2Icon')
-            input.form-control(name='password', id='password2' type="password", placeholder="Confirm Password", aria-label="Confirm Password", tabindex='9', required)
+              button#viewPassword2Button.btn.btn-secondary(type="button", tabindex='8')
+                i#password2Icon.fa.fa-eye-slash
+            input#passwordConfirmation.form-control(name='passwordConfirmation', type="password", placeholder="Confirm Password", aria-label="Confirm Password", tabindex='9', required)
         div.form-group
-          button.btn.btn-primary.btn-block.btn-lg(id='registerButton', type='submit', tabindex='10') Register
+          button#registerButton.btn.btn-primary.btn-block.btn-lg(type='submit', tabindex='10') Register
